--- a/package.json
+++ b/package.json
@@ -27,12 +27,17 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.0.2",
+    "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~19.1.0",
     "nx": "20.4.6",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
@@ -40,7 +45,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0"
   },
-  "packageManager": "yarn@4.5.0",
+  "packageManager": "yarn@4.6.0",
   "dependencies": {
     "@angular/animations": "~19.1.0",
     "@angular/common": "~19.1.0",
@@ -55,5 +60,9 @@
     "express": "^4.21.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
+  },
+  "volta": {
+    "node": "22.14.0",
+    "yarn": "4.6.0"
   }
 }
