--- a/libs/sgx-translate-core/package.json
+++ b/libs/sgx-translate-core/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0"
+    "@angular/core": "^19.1.0",
+    "@ngrx/signals": "^19.0.1"
   },
   "sideEffects": false
 }
