--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
+    "@typescript-eslint/parser": "^8.24.1",
     "@typescript-eslint/utils": "^8.19.0",
     "angular-eslint": "^19.0.2",
     "autoprefixer": "^10.4.0",
